add func upload the file
